--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@aws-sdk/client-s3": "^3.948.0",
     "@aws-sdk/s3-request-presigner": "^3.948.0",
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
@@ -35,6 +36,7 @@
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.6.0",
     "react-leaflet": "^4.2.1",
@@ -46,10 +48,12 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.45",
     "@types/react-countup": "^4.3.0",
     "@types/react-dom": "^18.2.18",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.22",
     "eslint": "^8.55.0",
     "eslint-config-next": "^14.0.4",
