--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
@@ -54,6 +55,7 @@
     "@types/react-countup": "^4.3.0",
     "@types/react-dom": "^18.2.18",
     "@types/react-slick": "^0.23.13",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.22",
     "eslint": "^8.55.0",
     "eslint-config-next": "^14.0.4",
