--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-leaflet": "^4.2.1",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
